# testing_jules

./: README.md
tizen-vts/: CMakeLists.txt  README.md
tizen-vts/docs/: SETUP.md  TEST_EXECUTION.md  WRITING_TESTS.md
tizen-vts/examples/: sample_device_features.xml  sample_test_plan.xml
tizen-vts/harness/: tizen_vts_cli.py
tizen-vts/scripts/: build_tests.sh  push_tests.sh  setup_host.sh
tizen-vts/src/hal_tests/: CMakeLists.txt  mock_hal_header.h  sample_hal_test.cpp
tizen-vts/src/kernel_tests/: CMakeLists.txt  sample_kernel_test.cpp
